<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:viewBindingIgnore="true">

    <ImageView
        android:src="@drawable/btn_copy"
        android:padding="@dimen/_15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:tint="@color/theme"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/ip"
        android:text="@string/ip"
        android:lines="1"
        android:padding="@dimen/_5dp"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/status"
        android:text="@string/status"
        android:padding="@dimen/_5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/no"
            android:padding="@dimen/_15dp"
            android:text="@string/no"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/yes"
            android:padding="@dimen/_15dp"
            android:text="@string/yes"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>